unpackaged/main/default/objects/Terminal_Detail__c/Terminal_Detail__c.object-meta.xml
<CustomObject>
    <label>Terminal Detail</label>
    <nameField>
        <displayFormat>TD-{0000000}</displayFormat>
        <label>Terminl Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Terminal Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>