unpackaged/main/default/objects/Terminal_Detail__c/fields/Approved_by_Commercial_Committee__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_Commercial_Committee__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick ths box if the terminals requested have already been approved by the Commercial Committee</inlineHelpText>
    <label>Approved by Commercial Committee</label>
    <type>Checkbox</type>
</CustomField>