unpackaged/main/default/objects/Terminal_Detail__c/fields/Avg_Net_Comm_Per_Terminal__c.field-meta.xml
<CustomField>
    <fullName>Avg_Net_Comm_Per_Terminal__c</fullName>
    <label>Avg Net Comm Per Terminal per Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>