unpackaged/main/default/objects/Terminal_Detail__c/fields/Background_to_Request__c.field-meta.xml
<CustomField>
    <fullName>Background_to_Request__c</fullName>
    <label>Background to Request</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>