unpackaged/main/default/objects/Terminal_Detail__c/fields/Date_of_Commercial_Committee_Approval__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Commercial_Committee_Approval__c</fullName>
    <label>Date of Commercial Committee Approval</label>
    <type>Date</type>
</CustomField>