unpackaged/main/default/objects/Terminal_Detail__c/fields/Head_Office__c.field-meta.xml
<CustomField>
    <fullName>Head_Office__c</fullName>
    <label>Head Office</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>notEqual</operation>
            <value>Shop</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Terminal Requests</relationshipLabel>
    <relationshipName>Terminal_Details</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>