unpackaged/main/default/objects/Terminal_Detail__c/fields/Quantity_PAX__c.field-meta.xml
<CustomField>
    <fullName>Quantity_PAX__c</fullName>
    <label>Quantity (PAX)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>