unpackaged/main/default/objects/Terminal_Detail__c/fields/Quantity_PTF__c.field-meta.xml
<CustomField>
    <fullName>Quantity_PTF__c</fullName>
    <label>Quantity (PTF)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>