unpackaged/main/default/objects/Terminal_Detail__c/fields/Quantity_Vx__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Vx__c</fullName>
    <label>Quantity (Vx)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>