unpackaged/main/default/objects/Terminal_Detail__c/fields/Rental_Return_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>Rental_Return_Per_Month__c</fullName>
    <inlineHelpText>Value Per Terminal</inlineHelpText>
    <label>Rental Return Per Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>