unpackaged/main/default/objects/Terminal_Detail__c/fields/Shop_Brand_Location__c.field-meta.xml
<CustomField>
    <fullName>Shop_Brand_Location__c</fullName>
    <inlineHelpText>If there are fewer than 10 terminals ordered please enter the brands and locations (city or region) of the shops.</inlineHelpText>
    <label>Shop Brand &amp; Location</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>