unpackaged/main/default/objects/Terminal_Detail__c/fields/Terminal_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Terminal_Approval_Status__c</fullName>
    <defaultValue>&quot;Not Approved&quot;</defaultValue>
    <label>Terminal Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Terminal_Approval_Status</valueSetName>
    </valueSet>
</CustomField>