unpackaged/main/default/objects/Terminal_Detail__c/fields/Terminal_Request__c.field-meta.xml
<CustomField>
    <fullName>Terminal_Request__c</fullName>
    <label>Terminal Request</label>
    <referenceTo>Terminal_Request__c</referenceTo>
    <relationshipLabel>Terminal Details</relationshipLabel>
    <relationshipName>Terminal_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>