unpackaged/main/default/objects/Terminal_Detail__c/fields/Terminal_Type__c.field-meta.xml
<CustomField>
    <fullName>Terminal_Type__c</fullName>
    <label>Terminal Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Solution__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vx520</fullName>
            </value>
            <value>
                <fullName>Vx520/820</fullName>
            </value>
            <value>
                <fullName>Vx680 3G</fullName>
            </value>
            <value>
                <fullName>Vx680 BT/Wi-Fi</fullName>
            </value>
            <value>
                <fullName>Vx690</fullName>
            </value>
            <value>
                <fullName>A920</fullName>
            </value>
            <value>
                <fullName>Samsung A10</fullName>
            </value>
            <value>
                <fullName>Samsung Tab Active2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>