unpackaged/main/default/objects/Terminal_Detail__c/recordTypes/Terminal_Detail_PAX.recordType-meta.xml
<RecordType>
    <fullName>Terminal_Detail_PAX</fullName>
    <active>true</active>
    <label>Terminal Detail PAX</label>
</RecordType>