unpackaged/main/default/objects/Terminal_Detail__c/recordTypes/Terminal_Detail_PTF.recordType-meta.xml
<RecordType>
    <fullName>Terminal_Detail_PTF</fullName>
    <active>true</active>
    <label>Terminal Detail PTF</label>
</RecordType>