unpackaged/main/default/objects/Terminal_Detail__c/recordTypes/Terminal_Detail_Vx.recordType-meta.xml
<RecordType>
    <fullName>Terminal_Detail_Vx</fullName>
    <active>true</active>
    <label>Terminal Detail Vx</label>
</RecordType>