unpackaged/main/default/objects/Terminal_Detail__c/validationRules/Commercial_Committee_Approval_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Commercial_Committee_Approval_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Approved_by_Commercial_Committee__c = TRUE, ISBLANK(Date_of_Commercial_Committee_Approval__c))</errorConditionFormula>
    <errorDisplayField>Date_of_Commercial_Committee_Approval__c</errorDisplayField>
    <errorMessage>Please enter the date of the Commercial Committee Approval</errorMessage>
</ValidationRule>