unpackaged/main/default/objects/Terminal_Detail__c/validationRules/Comms_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Comms_Type</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(Connection_Type__c) = &quot;Online&quot;, ISBLANK(TEXT(Comms_Type__c)))</errorConditionFormula>
    <errorDisplayField>Comms_Type__c</errorDisplayField>
    <errorMessage>You must add the Comms Type for online solutions.</errorMessage>
</ValidationRule>