unpackaged/main/default/objects/Terminal_Detail__c/validationRules/Connection_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Connection_Type</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(Use__c) = &quot;Tax Free Only&quot;,  RecordType.Name = &quot;Terminal Detail Vx&quot;, ISBLANK(TEXT(Connection_Type__c)))</errorConditionFormula>
    <errorDisplayField>Connection_Type__c</errorDisplayField>
    <errorMessage>Please enter the Connection Type</errorMessage>
</ValidationRule>